@@ -1,6 +1,10 @@
 2001-07-15  Gary V. Vaughan  <gary@gnu.org>
 
 	From Bruno Haible <haible@ilog.fr>:
+	(install-@DIR@LISP): Handle case where lispdir is not defined.
+	(uninstall-@DIR@LISP): Likewise.
+
+	From Bruno Haible <haible@ilog.fr>:
 	* lispdir.am (uninstall-@DIR@LISP): DESTDIR was missing.
 
 	From Bruno Haible <haible@ilog.fr>:
